package dto;

public record FabricanteDTO(
    String nome,
    String pais
) {
}